# turtle

./: Cargo.toml  README.md
models/: qwen_chat_template.json
src/: config.rs  lib.rs  main.rs  project.rs
src/agent/: action.rs  agent_loop.rs  mod.rs  state.rs
src/languages/: mod.rs  odin.rs  odin_system.md  rust.rs  rust_system.md
src/llm/: local.rs  mock.rs  mod.rs
src/tools/: mod.rs
