[package]
name = "turtle"
version = "0.0.1"
edition = "2021"

[dependencies]
mistralrs = { version = "0.8", features = ["metal"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
regex = "1"
async-trait = "0.1"

